kotlin-ide/idea/testData/multiplatform/incompleteActualization/jvm/jvm.kt
package foo

actual class ExpectInCommonActualInJvmOnly
actual class <!LINE_MARKER("descr='Has declaration in common module'")!>ExpectInMiddleActualInJvmOnly<!>